--- a/index.html
+++ b/index.html
@@ -1,126 +1,84 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
+
 <head>
-	<title>游戏游戏游戏</title>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/pages.css">
-	<!-- 新 Bootstrap 核心 CSS 文件 -->
-	<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
-
-	<!-- 可选的Bootstrap主题文件（一般不用引入） -->
-	<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
-
-	<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-	<script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
-
-	<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-	<script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-
+    <title>游戏游戏游戏</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/pages.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </head>
+
 <body>
-
-	<nav class=" navbar navbar-default navbar-fixed-top" role="navigation" >
-		<div class="container-fluid">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>			
-				<a class="nav-brand" href="index.html"><img style="width: 40px;height: 40px;" src="img/logo.jpg" /></a>
-			</div>
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav" role="tablist">
-					<li role="presentation" class="active">
-						<a href="index.html">首页</a>
-					</li>
-
-					<li role="presentation">
-						<a href="recommend.html">游戏佳作推荐</a>
-					</li>
-					<li role="presentation" class="dropdown">
-						<a class="dropdown-toggle" data-toggle="dropdown" href="#">
+    <nav class=" navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+                <a class="nav-brand" href="index.html"><img style="width: 40px;height: 40px;" src="img/logo.jpg" /></a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav" role="tablist">
+                    <li role="presentation" class="active"> <a href="index.html">首页</a> </li>
+                    <li role="presentation"> <a href="recommend.html">游戏佳作推荐</a> </li>
+                    <li role="presentation" class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href="#">
 							游戏分发平台 <span class="caret"></span>
 						</a>
-						<ul class="dropdown-menu" role="menu">
-							<li role="presentation">
-								<a href="origin.html">Origin</a>
-							</li >
-							<li role="presentation">
-								<a href="steam.html">Steam</a>
-							</li>
-							<li role="presentation">
-								<a href="uplay.html">UPlay</a>
-							</li>
-
-
-						</ul>
-					</li>					
-					<li role="presentation" class="hidden-sm">
-						<a href="personalinformation.html">添加我为好友</a>
-					</li>
-				</ul>
-				<form class="navbar-form navbar-right " role="search" action="http://store.steampowered.com/search/" >
-					<div class="form-group">
-						<input type="text" class="form-control" placeholder="游戏搜索" name="term" >
-					</div>
-					<button type="submit" class="btn btn-default" onclick="var $Form = $J(this).parents('form'); $Form.submit(); return false;">搜索</button>
-				</form>
-			</div>
-
-		</div>
-		
-	</nav>
-	<article class="slider">
-		<section  class="col-md-10 col-md-offset-1">
-			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-				<!-- Indicators -->
-				<ol class="carousel-indicators">
-					<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-					<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-					<li data-target="#carousel-example-generic" data-slide-to="2"></li>
-				</ol>
-
-				<!-- Wrapper for slides -->
-				<div class="carousel-inner" role="listbox">
-					<div class="item active">
-						<img src="img/slider0.png" alt="steam" width="100%">
-						<div class="carousel-caption">
-							<h2>	Steam商店界面</h2>
-							<p><a href="http://store.steampowered.com/" class="navbar-link">立即浏览</a></p>
-						</div>
-					</div>
-					<div class="item">
-						<img src="img/slider1.png" alt="uplay" width="100%">
-						<div class="carousel-caption">
-							<h2>	UPlay商店界面</h2>
-							<p><a href="http://store.steampowered.com/" class="navbar-link">立即浏览</a></p>
-						</div>
-					</div>
-					<div class="item">
-						<img src="img/slider2.png" alt="origin" width="100%">
-						<div class="carousel-caption">
-							<h2>Origin商店界面</h2>
-							<p><a href="http://store.steampowered.com/" class="navbar-link">立即浏览</a></p>
-						</div>
-					</div>
-				</div>
-
-				<!-- Controls -->
-				<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-					<span class="glyphicon glyphicon-chevron-left"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-					<span class="glyphicon glyphicon-chevron-right"></span>
-					<span class="sr-only">Next</span>
-				</a>
-			</div>
-		</section>
-	</article>
-	
+                        <ul class="dropdown-menu" role="menu">
+                            <li role="presentation"> <a href="origin.html">Origin</a> </li>
+                            <li role="presentation"> <a href="steam.html">Steam</a> </li>
+                            <li role="presentation"> <a href="uplay.html">UPlay</a> </li>
+                        </ul>
+                    </li>
+                    <li role="presentation" class="hidden-sm"> <a href="personalinformation.html">添加我为好友</a> </li>
+                </ul>
+                <form class="navbar-form navbar-right " role="search" action="http://store.steampowered.com/search/">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="游戏搜索" name="term"> </div>
+                    <button type="submit" class="btn btn-default" onclick="var $Form = $J(this).parents('form'); $Form.submit(); return false;">搜索</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+    <article class="slider">
+        <section class="col-md-10 col-md-offset-1">
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                </ol>
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active"> <img src="img/slider0.png" alt="steam" width="100%">
+                        <div class="carousel-caption">
+                            <h2>	Steam商店界面</h2>
+                            <p><a href="http://store.steampowered.com/" class="navbar-link">立即浏览</a></p>
+                        </div>
+                    </div>
+                    <div class="item"> <img src="img/slider1.png" alt="uplay" width="100%">
+                        <div class="carousel-caption">
+                            <h2>	UPlay商店界面</h2>
+                            <p><a href="http://store.steampowered.com/" class="navbar-link">立即浏览</a></p>
+                        </div>
+                    </div>
+                    <div class="item"> <img src="img/slider2.png" alt="origin" width="100%">
+                        <div class="carousel-caption">
+                            <h2>Origin商店界面</h2>
+                            <p><a href="http://store.steampowered.com/" class="navbar-link">立即浏览</a></p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Controls -->
+                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"></span> <span class="sr-only">Previous</span> </a>
+                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next"> <span class="glyphicon glyphicon-chevron-right"></span> <span class="sr-only">Next</span> </a>
+            </div>
+        </section>
+    </article>
 </body>
+
 </html>
