--- a/steam.html
+++ b/steam.html
@@ -1,83 +1,51 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
+
 <head>
-	<title>steam</title>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/pages.css">
-	<!-- 新 Bootstrap 核心 CSS 文件 -->
-	<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
-
-	<!-- 可选的Bootstrap主题文件（一般不用引入） -->
-	<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
-
-	<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-	<script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
-
-	<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-	<script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-
+    <title>steam</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/pages.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </head>
-<body>
 
-	<nav class=" navbar navbar-default navbar-fixed-top" role="navigation" >
-		<div class="container-fluid">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>			
-				<a class="nav-brand" href="index.html"><img style="width: 40px;height: 40px;" src="img/logo.jpg" /></a>
-			</div>
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav" role="tablist">
-					<li role="presentation" class="hidden-sm">
-						<a href="index.html">首页</a>
-					</li>
-					
-					<li role="presentation">
-						<a href="recommend.html">游戏佳作推荐</a>
-					</li>
-					<li role="presentation" class="dropdown active">
-						<a class="dropdown-toggle " data-toggle="dropdown" href="#">
+<body>
+    <nav class=" navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+                <a class="nav-brand" href="index.html"><img style="width: 40px;height: 40px;" src="img/logo.jpg" /></a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav" role="tablist">
+                    <li role="presentation" class="hidden-sm"> <a href="index.html">首页</a> </li>
+                    <li role="presentation"> <a href="recommend.html">游戏佳作推荐</a> </li>
+                    <li role="presentation" class="dropdown active"> <a class="dropdown-toggle " data-toggle="dropdown" href="#">
 							游戏分发平台 <span class="caret"></span>
 						</a>
-						<ul class="dropdown-menu" role="menu">
-							<li role="presentation">
-								<a href="origin.html">Origin</a>
-							</li >
-							<li role="presentation">
-								<a href="steam.html">Steam</a>
-							</li>
-							<li role="presentation">
-								<a href="uplay.html">UPlay</a>
-							</li>
-							
-
-						</ul>
-					</li>					
-					<li role="presentation" class="hidden-sm">
-						<a href="personalinformation.html">添加我为好友</a>
-					</li>
-				</ul>
-				<form class="navbar-form navbar-right " role="search" action="http://store.steampowered.com/search/" >
-					<div class="form-group">
-						<input type="text" class="form-control" placeholder="游戏搜索" name="term" >
-					</div>
-					<button type="submit" class="btn btn-default" onclick="var $Form = $J(this).parents('form'); $Form.submit(); return false;">搜索</button>
-				</form>
-			</div>
-
-		</div>
-		
-	</nav>
-	<article class="slider">
-		<section  class="col-md-10 col-md-offset-1">
-		</section>
-	</article>
-	
+                        <ul class="dropdown-menu" role="menu">
+                            <li role="presentation"> <a href="origin.html">Origin</a> </li>
+                            <li role="presentation"> <a href="steam.html">Steam</a> </li>
+                            <li role="presentation"> <a href="uplay.html">UPlay</a> </li>
+                        </ul>
+                    </li>
+                    <li role="presentation" class="hidden-sm"> <a href="personalinformation.html">添加我为好友</a> </li>
+                </ul>
+                <form class="navbar-form navbar-right " role="search" action="http://store.steampowered.com/search/">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="游戏搜索" name="term"> </div>
+                    <button type="submit" class="btn btn-default" onclick="var $Form = $J(this).parents('form'); $Form.submit(); return false;">搜索</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+    <article class="slider">
+        <section class="col-md-10 col-md-offset-1"> </section>
+    </article>
 </body>
+
 </html>
