--- a/origin.html
+++ b/origin.html
@@ -43,9 +43,93 @@
             </div>
         </div>
     </nav>
+    <header class="jumbotron">
+        <div class="container">
+            <h1>Origin</h1>
+            <p>EA旗下游戏平台，提供了EA及合作厂商的游戏销售分发。</p>
+        </div>
+    </header>
     <article class="slider">
-        <section class="col-md-10 col-md-offset-1"> </section>
+        <section class="col-md-6 col-md-offset-2 ">
+            <div class="page-header">
+                <h2>origin <small>（游戏社交平台）</small></h2> </div>
+            <p>Origin平台由美国艺电游戏公司（Electronic Arts Inc，简称EA）于2011年正式发布，EA重金打造的全方位游戏社交平台，其Mac版于2012年底开始公开测试。</p>
+            <p>Origin平台集游戏数字版购买、实体版激活、下载、数据云存储、社交等功能于一体，并且正在逐步增加更多功能。</p>
+            <p>Origin平台已有500多部游戏可供激活或购买，且游戏数量与日俱增。与Origin平台紧密合作的第三方游戏公司有：Warner Bros（华纳兄弟）、Capcom（卡普空）、Atari（英宝格）、SEGA（世嘉）、Bandai（万代）、DreamCatcher Interactive及多家著名独立游戏工作室，2013年2月正式与育碧游戏公司开展全面合作。 Origin平台有数部免费游戏可直接激活下载：《战地风云1942》《极品飞车：世界》《星球大战：旧共和国》以及诸多游戏大作的Demo。</p>
+            <p>现在及未来EA游戏PC版、Mac版全部为Origin独占。</p>
+            <p>Origin将游戏世界完整地带到一个统一、便捷的应用程序上。下载过程更简单，安装既快捷又方便，您可以随时随地安全地购买、进行您最爱的游戏。您甚至可以在游戏时，直接在Origin应用程序内与好友聊天。Origin的新增功能有在线试玩、免费游戏和beta测试版的云存储功能。该功能令您可以将游戏存档和成就保存在网上，并可稍后在多种电脑游戏系统上获取。移动玩家注意了，Origin服务同样支持您的移动装置！</p>
+            <p>Origin现在正联手部分全球最佳游戏发行商，力求为您献上电脑游戏界的顶尖作品，使您获得更多最新、最佳的游戏内容。</p>
+        </section>
+        <section class="col-md-6 col-md-offset-2 ">
+            <div class="page-header">
+                <h2>下载优势</h2> </div>
+            <p>告别光盘- 如果您曾经丢失或刮花一张您挚爱游戏的光盘，您将会爱上Origin的游戏库功能。您的所有游戏都等您随时随地再次进行。只需启动Origin应用程序，您即可在一个方便的游戏库中获取您购买过的全部游戏。</p>
+            <p>在任何电脑上进行游戏- 无论您升级了新机器，或者只是在朋友家住一周，只要您安装了Origin，您的所有游戏都触手可及。</p>
+            <p>购买更方便- 有了Origin，您无需再排队等候，或者支付额外的运费，在购买新游戏时，您将获得即刻享有的快感。</p>
+            <p>预载新游戏- 我们让您能够提前游戏发行日几天下载全新游戏，在发行日当天您就可以立即开始游戏。</p>
+            <p>自动补丁- 自动下载、安装游戏补丁，您每次游戏获得的都是当时的最佳体验。</p>
+        </section>
+        <section class="col-md-6 col-md-offset-2">
+            <div class="page-header">
+                <h2>常见问题解答编辑</h2> </div>
+            <h3>Origin是什么？</h3>
+            <p>Origin是一个游戏服务平台，让您可以随时随地通过各种设备连接至您的好友和自己喜欢的游戏。Origin还帮助您发现世界顶级发行商的力作，为您呈现其他地方所没有的内容和优惠。</p>
+            <h3>Origin提供哪些社交功能？</h3>
+            <p>您可以使用自己的Origin帐户找到好友并与他们聊天，看看他们在玩什么，并邀请他们加入您玩的游戏。您可在任何安装Origin的平台上访问好友列表。</p>
+            <p>如果您在PC上使用Origin，您还可以简单快捷地在线广播自己的游戏生活，与各地的玩家分享。</p>
+            <h3>Origin提供云存储吗？</h3>
+            <p>我们的云存储功能将您的游戏进度文件保存在"云端"，也就是远程安全服务器网络上，这样您就可以在任何相同平台（Mac或PC）且安装Origin的电脑上从中断的地方继续游戏了。它也可以备份本地游戏存档。</p>
+            <h3>我该如何通过Origin提交、查看或更改订单？</h3>
+            <p>您可以通过Origin中的商店选项卡或Origin来通过Origin提交订单。要在Origin中查看您的订单记录，登录后在帮助菜单中选择订单记录。如果您需要对您的订单做出修改，请准备好您的订单号并联系我们，由我们来为您处理。</p>
+            <h3>我该如何向"我的游戏"库添加游戏？</h3>
+            <p>当您通过Origin购买一款数字下载版的游戏时——不论是通过商店选项卡或是在origin网上——游戏都自动添加到您的"我的游戏"库中。</p>
+            <p>您还可以在Origin菜单中选择添加游戏来向"我的游戏"库添加并非在Origin购买的游戏，包括Mac版或PC版光盘游戏。</p>
+            <p>一些EA游戏支持双平台（在Mac和PC上都能玩）——您可以在Origin上买个游戏，然后当您在自己的Mac或PC上登录Origin时，该游戏将自动出现在您统一的(Mac/PC)"我的游戏"库中。</p>
+            <h3>Origin上的所有游戏都收费吗？</h3>
+            <p>Origin提供了很多免费选择：</p>
+            <p>免费游戏是您可以免费下载和玩的完整游戏。</p>
+            <p>免费试用游戏是您可以下载并玩特定一段时间的完整游戏。如果您选择在试用结束后购买游戏，Origin的云存储将使您可以从试用结束时中断的地方继续游戏。</p>
+            <p>试玩和测试游戏是典型的预发行游戏。试玩游戏是游戏中截取的一小部分，您只能玩特定的级别或游戏指定的部分。测试游戏是仍在开发的游戏的早期版本，有时由游戏团队发行以接受压力测试或收集玩家对其问题和性能的反馈。之后最终版游戏才会公开发行。</p>
+            <p>有时付费游戏在促销时也会限时免费；如果您免费下载了一款游戏，您就可以像任何付费游戏一样永远拥有它。</p>
+            <h3>我怎样能让自己的帐户更安全？</h3>
+            <p>您的帐户和个人数据安全对EA来讲至关重要。虽然EA有着稳妥的安全措施，我们仍然强烈推荐您通过创建安全的密码并经常更改密码来保护您的Origin帐户。您的密码长度必须在8-16个字符之间，而且必须包含：一个小写字母、一个大写字母和一个数字。如需重置密码，请在登录时在密码栏位下选择"无法访问您的帐户？"</p>
+            <p>无论由于何种原因，如果您无法接入自己的帐户，或者您担心自己的Origin帐户安全，请联系客服以获得协助。</p>
+            <h3>EA通过Origin收集哪些类型的数据？</h3>
+            <p>有两种类型的信息是一直通过Origin收集的：</p>
+            <p>(1) Origin持续运行必不可少的系统交互数据。这包括匿名故障报告（包括故障时间和大概地点）；硬件规格数据（有关您设备的CPU、显卡、显示器、内存、浏览器和操作系统的信息）；以及其他功能细节（成功安装、不成功的游戏下载、游戏启动数据、错误、网络连接中断）。我们还会收集MAC和IP地址，但会通过模糊和散列处理来保护您的隐私。所有这些数据都用于改进Origin的性能、发现问题并提升您的整体体验。</p>
+            <p>(2) 您直接提供给Origin的信息。这包括Origin首选项、网络功能使用情况、购买信息和帐户信息（仅用于实现特定服务）。例如，Origin需要收集和验证您的个人信息以处理游戏购买。</p>
+            <p>如需详细了解EA收集、存储和使用消费者信息的情况，请查看EA的保密协议。</p>
+            <p>我可以关闭数据收集吗？</p>
+            <p>您可以随时关闭共享硬件规格和故障报告。系统交互数据共享可以限制和匿名，但无法完全禁用。您可以通过选择Origin 应用程序设置中的高级选项卡编辑数据共享的首选项。</p>
+        </section>
+        <section class="col-md-6 col-md-offset-2">
+            <div class="page-header">
+                <h2>个人评价</h2> </div>
+            <p>以上内容摘抄自百科</p>
+            <p>讲道理虽然现在steam用的最多，但origin是我接触到的第一个正版游戏分发平台，从基友那儿第一次听说了战地3这个游戏，第一次有了玩儿游戏要花钱的念，算是启蒙平台吧。</p>
+            <p>不过烂橘子真不是浪得虚名的，第一次装好战地3，光是配置hosts，配置PB，装网页外挂插件就折腾了半天。接着还要忍受土豆服务器的高延迟和丢包。经常玩儿的正High，突然掉线出游戏，或是浏览个商店都能频繁崩溃然后又是各种连线问题。</p>
+            <p> 不过虽然说存在着各种问题，不可否认的是这个平台对我来说还是有着特殊的意义的，虽然曾被搞的十分崩溃，怒删软件，大吼：lz绝对不会在用这破平台，但身体却十分老实。而且经过上次重做的新版客户端的发布，原来的大问题基本解决了，下载速度还是比较给力的，基本能跑满带宽。而且鉴于EA游戏的独占性，想玩儿啥战地啦，泰坦陨落啦，花园战争啦，星战啦之类的游戏还是得乖乖用origin。对了，origin裸连是按欧元区结算，可以自行翻到港区结算。 </p>
+            <p>辣鸡平台，毁我青春，费我钱财。</p>
+        </section>
     </article>
+    <center>
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+                <li>
+                    <a href="#" aria-label="Previous"> <span aria-hidden="true">&laquo;</span> </a>
+                </li>
+                <li><a href="origin.html">1</a></li>
+                <li><a href="steam.html">2</a></li>
+                <li><a href="uplay.html">3</a></li>
+                <li>
+                    <a href="steam.html" aria-label="Next"> <span aria-hidden="true">&raquo;</span> </a>
+                </li>
+            </ul>
+        </nav>
+    </center>
+    <aside class="col-md-2 col-md-offset-8" style="position:fixed; top:450px;">
+        <div class="list-group"> <a href="#" class="list-group-item active">Cras justo odio</a> <a href="#" class="list-group-item">Dapibus ac facilisis in</a> <a href="#" class="list-group-item">Morbi leo risus</a> <a href="#" class="list-group-item">Porta ac container-fluidsectetur ac</a> <a href="#" class="list-group-item">Vestibulum at eros</a> </div>
+    </aside>
 </body>
 
 </html>
