--- a/personalinformation.html
+++ b/personalinformation.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#FFFDFD">
 <!--    <link rel="stylesheet" type="text/css" href="css/normalize.css" />-->
     <link rel="stylesheet"  href="css/style.css">
     <link rel="stylesheet"  href="css/demo.css" />
@@ -53,7 +53,7 @@
         </div>
     </nav>
     <!-- Modal -->
-    <div style="padding-top: 20px;" class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div style="padding-top: 0px;" class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content" >
                 <iframe  id="goldendata_form_ndgR4r" src="https://jinshuju.net/f/ndgR4r?background=white&banner=show&embedded=true" width="100%" frameborder=0 allowTransparency="true" height="550" scrolling="no">你的浏览器不支持iframe</iframe>
